2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-05
	* yet small improvement to dqm diagnostic
	
2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-04
	* acceptDQMdiscard flag now counting 
	* moved flag for discard after sent for dqm cells
	* added timeout on send for dqm cells
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-03
	* split spurious dqm discard message and demote one cat to WARN

2011-02-04  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-02
	* remove crash due to segv in FUResourceTable destructor 
	
2011-01-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-01
	* 15-10 fix typo in message

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-00
	* 15-10 migration to xml buildfile
	* 16-00 further improvement to stop handling
	
2010-10-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-09
	* added emergencyStop function to handle stuck EP processes holding on to Shmem
	* factored out resourcetable config to reuse in emergencyStop
	* use of emergencyStop in stopping() - better order of messages for dead processes
	
2010-06-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-08
	* fix watchdog check generating false sentinel errors

2010-06-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-07
	* latch shmem inconsistent state to avoid multiple sentinel messages


2010-06-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-06
	* double check consistency of shmem at configure
	* counter and flag for data errors in flashlist

2010-05-28  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-05
	* added interface to inject CRC error and CRC error message via sentinel

2010-05-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-04
	* add STOP evt type (distinguish from EMPTY)

2010-04-28  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-03
	* adjust shift of rack id to fit it in 16 bits
	
2010-04-27  Emilio Meschi  <emilio.meschi@cern.ch>
