@@ -1,3 +1,8 @@
+2011-04-13  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-16-06
+	* fix stopping when all clients are dead
+
 2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-16-05
